--- a/css/styles.css
+++ b/css/styles.css
@@ -6078,6 +6078,12 @@ a.close.disabled {
   background-color: #bd5d38 !important;
 }
 
+.bg-utorange {
+  background-color: #dd7a39 !important;
+}
+
+
+
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
