--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ sup {
 }
 
 a {
-  color: #bd5d38;
+  color: #343a40;
   text-decoration: none;
   background-color: transparent;
 }
@@ -6081,6 +6081,10 @@ a.close.disabled {
 .bg-utorange {
   background-color: #dd7a39 !important;
 }
+
+/* .bg-utorange {
+  background-color: #bf5700 !important;
+} */
 
 
 
